@@ -220,6 +220,16 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <argLine>
+                            --enable-preview
+                            --add-modules jdk.incubator.vector
+                        </argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <configuration>
                         <!-- Exclude files using JEP 447 (statements before super/this) - unsupported by Checkstyle parser -->
@@ -275,6 +285,7 @@
                                     </includes>
                                     <argLine>
                                         --enable-preview
+                                        --add-modules jdk.incubator.vector
                                         ${commonTestFXArgs}
                                     </argLine>
                                     <forkCount>1</forkCount>
@@ -321,6 +332,7 @@
                                     </includes>
                                     <argLine>
                                         --enable-preview
+                                        --add-modules jdk.incubator.vector
                                         ${commonTestFXArgs}
                                     </argLine>
                                 </configuration>
